# cn-csc107

./: CHANGES.md  README.md  pyproject.toml  setup.cfg  vscode.md
docs/: poetry.md  pyenv.md
python/: cone.py  cone_area.py  cone_calculator.py  hello.py  hello_template.py
starter/python/: starter.py
vscode/: python.code-profile  vscode.md
