[tool.poetry]
name = "cs107"
version = "0.1.0"
description = ""
authors = ["Jeff Holmes <jholmes@cn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

